# FIAP-Tech-Challenge-4

./: .gitignore  README.md  main.py  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
notebooks/: best_params_AAPL.json  optimized_config_AAPL.json
src/fiap_tech_challenge_4/api/: main.py  model_train.py  model_utils.py  preprocess.py
src/fiap_tech_challenge_4/data/: features.py  ingestion.py
src/fiap_tech_challenge_4/inference/: infer.py
src/fiap_tech_challenge_4/model/: data_strategies.py  lstm.py
src/fiap_tech_challenge_4/train/: model.py
tests/: test_placeholder.py
